@@ -1,3 +1,7 @@
+2011-02-05  Steffen Kamper  <steffen@typo3.org>
+
+	* Fixed bug #17490: After introducing the locking in #17289 no CSRF token will ever be deleted (Thanks to Helmut Hummel)
+
 2011-02-05  Steffen Gebert  <steffen@steffen-gebert.de>
 
 	* Fixed bug #17374: implode() issues in Install Tool
